--- a/MvcOrganikSebzeler/Views/Default/Index.cshtml
+++ b/MvcOrganikSebzeler/Views/Default/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using MvcOrganikSebzeler.Models.Entity
+@model List<TblUrunler>
 @{
     Layout = null;
 }
@@ -14,11 +15,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>Organic Food Agriculture Category Bootstrap Responsive Web Template | Home :: W3layouts</title>
+    <title>Organik Gıda Tarım Kategorisi Bootstrap Duyarlı Web Sayfası</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Organic Food Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+    <meta name="keywords" content="Organik Gıda Duyarlı web şablonu, Önyükleme Web Şablonları, Düz Web Şablonları" />
     <script>
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -60,7 +61,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <!-- nav -->
                     <div class="nav_w3ls">
                         <nav>
-                            <label for="drop" class="toggle toogle-2">Menu</label>
+                            <label for="drop" class="toggle toogle-2">Menü</label>
                             <input type="checkbox" id="drop" />
                             <ul class="menu">
                                 <li class="active"><a href="index.html">Ana Sayfa</a></li>
@@ -143,8 +144,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="about py-5">
         <div class="container py-xl-5 py-lg-3">
             <div class="welcome-left text-center py-md-5 py-sm-3">
-                <h3>Welcome to our Awesome Organic Food Website</h3>
-                <a href="about.html" class="btn button-style button-style-2 mt-sm-5 mt-4">Read More</a>
+                <h3>Müthiş Organik Gıda Web Sitemize Hoş Geldiniz</h3>
+                <a href="about.html" class="btn button-style button-style-2 mt-sm-5 mt-4">Devamını Oku</a>
             </div>
         </div>
     </div>
@@ -153,16 +154,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <section class="py-5 team-w3ls" id="best">
         <div class="container py-xl-5 py-lg-3">
             <h3 class="title-w3 pt-sm-5 mb-5 text-wh font-weight-bold">
-                Healthy Organic Food
-                <span>is available at our Website</span>
+                Sağlıklı Organik Besinler
+                <span>Web sitemizde mevcuttur</span>
             </h3>
             <div class="d-flex team-w3ls-row pt-xl-5 pt-md-3">
                 <div class="col-lg-4 col-sm-6">
                     <div class="box20">
                         <img src="~/web/images/d1.jpg" alt="" class="img-fluid" />
                         <div class="box-content">
-                            <h3 class="title">Plums</h3>
-                            <span class="post">Organic Food</span>
+                            <h3 class="title">Erikler</h3>
+                            <span class="post">Organik Besinler</span>
                         </div>
                     </div>
                 </div>
@@ -170,8 +171,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="box20 active">
                         <img src="~/web/images/d6.jpg" alt="" class="img-fluid" />
                         <div class="box-content active">
-                            <h3 class="title">Oranges</h3>
-                            <span class="post">Organic Food</span>
+                            <h3 class="title">Portakallar</h3>
+                            <span class="post">Organik Besinler</span>
                         </div>
                     </div>
                 </div>
@@ -179,8 +180,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="box20">
                         <img src="~/web/images/d5.jpg" alt="" class="img-fluid" />
                         <div class="box-content">
-                            <h3 class="title">Berries</h3>
-                            <span class="post">Organic Food</span>
+                            <h3 class="title">Çilekler</h3>
+                            <span class="post">Organik Besinler</span>
                         </div>
                     </div>
                 </div>
@@ -190,8 +191,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="box20">
                         <img src="~/web/images/d4.jpg" alt="" class="img-fluid" />
                         <div class="box-content">
-                            <h3 class="title">Apples</h3>
-                            <span class="post">Organic Food</span>
+                            <h3 class="title">Elmalar</h3>
+                            <span class="post">Organik Besinler</span>
                         </div>
                     </div>
                 </div>
@@ -199,8 +200,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="box20">
                         <img src="~/web/images/d3.jpg" alt="" class="img-fluid" />
                         <div class="box-content">
-                            <h3 class="title">Grapes</h3>
-                            <span class="post">Organic Food</span>
+                            <h3 class="title">Üzümler</h3>
+                            <span class="post">Organik Besinler</span>
                         </div>
                     </div>
                 </div>
@@ -208,8 +209,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="box20">
                         <img src="~/web/images/d2.jpg" alt="" class="img-fluid" />
                         <div class="box-content">
-                            <h3 class="title">Carrots</h3>
-                            <span class="post">Organic Food</span>
+                            <h3 class="title">Havuçlar</h3>
+                            <span class="post">Organik Besinler</span>
                         </div>
                     </div>
                 </div>
@@ -222,18 +223,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container-fluid py-xl-5 py-lg-3">
             <div class="offset-xl-7 offset-lg-6 offset-md-4 offset-sm-2">
                 <div class="grids-whtas pr-xl-5">
-                    <h3 class="tittle text-wh mb-5 font-weight-bold">763+ fruits, vegetables & lot more</h3>
+                    <h3 class="tittle text-wh mb-5 font-weight-bold">763'den Fazla Meyve ve Sebze</h3>
                     <p class="lead text-li">
-                        Fresh From Our Farm ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at,
-                        semper varius orci. Nulla accumsan ac elit in congue.
+                        @foreach (var m in Model)
+                        {
+                            @m.UrunAd
+                            <br />
+                            @m.UrunAciklama
+                            <br />
+                            <br />
+
+                        }
                     </p>
                     <hr class="my-4">
-                    <p class="text-li">
-                        Rerum hic tenetur a sapiente delectus reiciendis maiores alias consequatur aut consequat
-                        sapien ut leo cursus
-                        rhoncus.Nullam dui mi, vulputate ac metus.
-                    </p>
-                    <a href="about.html" class="btn button-style mt-sm-5 mt-4">Read More</a>
+                    
+                    <a href="about.html" class="btn button-style mt-sm-5 mt-4">Devamını Oku</a>
                 </div>
             </div>
         </div>
@@ -243,24 +247,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="testimonials py-5" id="testi">
         <div class="container py-xl-5 py-lg-3">
             <h3 class="title-w3 mb-5 text-wh font-weight-bold">
-                What Our Customers Say
-                <span>Excellent Reviews for our Website</span>
+                Müşterilerimiz Ne Diyor?
+                <span>Web Sitemiz İçin Mükemmel Yorumlar</span>
             </h3>
             <div class="carousel-inner">
                 <div class="row">
                     <div class="col-lg-6 w3_testimonials_grid">
                         <div class="bg-wh p-sm-5 p-4">
                             <p class="sub-test-w3ls">
-                                Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
-                                impedit quo minus id quod possimus, omnis voluptas.
+                                Böyle yararlı bilgileri daha önce hiç görmemiştim.
                             </p>
                             <div class="row mt-5">
                                 <div class="col-3 testi-img-res">
                                     <img src="~/web/images/te1.jpg" alt=" " class="img-fluid" />
                                 </div>
                                 <div class="col-9 w3_testi_grid mt-xl-3 mt-lg-2 mt-md-4 mt-2">
-                                    <h5 class="mb-2">Thomas Carl</h5>
-                                    <p>Sed do eiusmod</p>
+                                    <h5 class="mb-2">Ertuğ Uygurlu</h5>
+                                    <p>Bu meyveler bi harika!</p>
                                 </div>
                             </div>
                         </div>
@@ -268,16 +271,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="col-lg-6 w3_testimonials_grid mt-lg-0 mt-4">
                         <div class="bg-wh p-sm-5 p-4">
                             <p class="sub-test-w3ls">
-                                Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
-                                impedit quo minus id quod possimus, omnis voluptas.
+                                Bu sitede okuduğum bilgiler çok işime yaradı. Emeği geçen herkese teşekkürler.
                             </p>
                             <div class="row mt-5">
                                 <div class="col-3 testi-img-res">
                                     <img src="~/web/images/te2.jpg" alt=" " class="img-fluid" />
                                 </div>
                                 <div class="col-9 w3_testi_grid  mt-xl-3 mt-lg-2 mt-md-4 mt-2">
-                                    <h5 class="mb-2">Adam Ster</h5>
-                                    <p>Sed do eiusmod</p>
+                                    <h5 class="mb-2">Merve Kaya</h5>
+                                    <p>Organik sebzelere bayılırım!</p>
                                 </div>
                             </div>
                         </div>
@@ -297,18 +299,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container pt-xl-5 pt-lg-3">
             <!-- newsletter -->
             <div class="newsletter_right_w3w3pvt-lau pb-md-5 pb-3" id="newsletter">
-                <h2 class="tittle text-wh mb-5 font-weight-bold">Subscribe Newsletter</h2>
+                <h2 class="tittle text-wh mb-5 font-weight-bold">Bültene Abone Ol</h2>
                 <div class="n-right-w3ls pt-3">
                     <form action="#" method="post">
                         <div class="row">
                             <div class="col-md-4 form-group">
-                                <input class="form-control" type="text" name="Name" placeholder="Name" required="">
+                                <input class="form-control" type="text" name="Name" placeholder="İsim" required="">
                             </div>
                             <div class="col-md-4 form-group px-md-0">
-                                <input class="form-control" type="email" name="Email" placeholder="Email Address" required="">
+                                <input class="form-control" type="email" name="Email" placeholder="Mail Adres" required="">
                             </div>
                             <div class="col-md-4 form-group mt-md-0 mt-3">
-                                <button class="form-control btn text-uppercase" type="submit">Subscribe</button>
+                                <button class="form-control btn text-uppercase" type="submit">Yorumlar</button>
                             </div>
                         </div>
                     </form>
@@ -321,16 +323,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-lg-5 col-md-7 w3l-footer mt-lg-3 text-md-left text-center">
                     <ul class="list-unstyled footer-nav-wthree">
                         <li class="mr-4">
-                            <a href="index.html" class="active">Home</a>
+                            <a href="index.html" class="active">Ana Sayfa</a>
                         </li>
                         <li class="mr-4">
-                            <a class="" href="about.html">About Us</a>
+                            <a class="" href="about.html">Hakkımızda</a>
                         </li>
                         <li class="mr-4">
-                            <a class="" href="gallery.html">Gallery</a>
+                            <a class="" href="gallery.html">Galeri</a>
                         </li>
                         <li>
-                            <a class="" href="contact.html">Contact Us</a>
+                            <a class="" href="contact.html">İletişim</a>
                         </li>
                     </ul>
                 </div>
@@ -361,8 +363,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!-- copyright -->
             <div class="row pt-lg-4 pt-3 text-md-left text-center">
                 <p class="col-xl-7 col-lg-8 copy-right-grids mt-lg-1">
-                    © 2019 Organic Food. All Rights Reserved | Design by
-                    <a href="https://w3layouts.com/" target="_blank">W3layouts</a>
+                    © 2023 Organik Gıda
+                    <a href="https://w3layouts.com/" target="_blank"></a>
                 </p>
                 <div class="col-xl-5 col-lg-4 text-center mt-lg-0 mt-4">
                     <a href="#home" class="move-top"></a>
